# vidur-simulator

./: .gitattributes  .gitignore  AGENTS.md  README.md  analyze_block_hash.py  analyze_block_relationship.py  analyze_blocks_formula.py  comparison_results.json  pyproject.toml  requirements.txt  run_simulation.py
.github/workflows/: lint.yml
analysis/: a100_p4d_latency_results.csv  all_percentiles_comparison.csv  analyze_percentiles.py  compare_all_percentiles.py  compare_all_vidur_vllm_percentiles.py  compare_benchmark_simulation.py  compare_latency_configs_comprehensive.py  comparison_results.csv  min_latency_config_comparison.csv  percentile_utils.py  plot_all_percentile.py  simple_percentile_analyzer.py  vidurparser.py  vllmbenchparser.py
analysis/qps_plots/: Plannable_Public_EC2_US_East.csv  benchmark_qps.py  config_optimizer_results.csv  config_optimizer_results_g6e_p4d_p5.csv  cost_analysis.py  plot_config_optimizer_results.py  plot_max_qps_per_dollar.py  plot_max_qps_per_dollar_main.py  qps_analysis.py  qps_by_model_parallelism_device.csv  run_bench_vidur_qps.py  single_node_results.csv  test_get_device_costs.py  test_parse_cost.py  total_simulated_cost_by_device_model.csv
analysis/results_with_decode/: comparison_results.csv
data/processed_traces/: arxiv_summarization_stats_llama2_tokenizer_filtered_v2_shortened.csv
docs/: config_explorer.md  how_to_run.md  profiling.md  profiling_status.md
misc/: process_scaled_mooncake.py  token_scaling.py
tests/: run_flashinfer_tests.py
tests/unit/: test_append_page_kvcache.py  (+3 more)
vidur/: logger.py  simulator.py
(+13644 files in other folders)
